testsuite/tests/overloadedrecflds/should_fail/DRFUnused.stderr

DRFUnused.hs:10:16: error: [-Wunused-top-binds (in -Wextra, -Wunused-binds), -Werror=unused-top-binds]
    Defined but not used: ‘foo’

DRFUnused.hs:18:5: warning: [-Wambiguous-fields (in -Wdefault)]
    The field ‘foo’ belonging to type U is ambiguous.
    This will not be supported by -XDuplicateRecordFields in future releases of GHC.
    You can use explicit case analysis to resolve the ambiguity.
